<resources>
    <string name="app_name">PPO</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">黒猫</string>
    <string name="enter_task_name">Enter Task name</string>
    <string name="button_add_task">Add task</string>
    <string name="finish_task">Finished!</string>
    <string name="item_task">Item_Task</string>
    <string name="is_important">Is important?</string>
    <string name="task_name_edittext">Task Name</string>
    <string name="is_daily">Is Daily?</string>
    <string name="tasks">Tasks:</string>
</resources>
