<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.kurobane.yan.ppo.AddTaskFragment">

    <TextView
        android:labelFor="@+id/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_task_name" />

    <EditText
        android:id="@+id/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/task_name_edittext" />

    <CheckBox
        android:id="@+id/is_important"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/is_important"/>

    <CheckBox
        android:id="@+id/is_daily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/is_daily"/>

    <Button
        android:onClick="addTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add_task"/>

</LinearLayout>
